Fix blurriness of editor at some widths.

--- a/client/packages/totallywired/src/components/editor/AlbumEditor.css
+++ b/client/packages/totallywired/src/components/editor/AlbumEditor.css
@@ -1,8 +1,12 @@
 .editor.fullscreen {
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   max-width: 100%;
   max-height: 100%;
+  transform: none;
+  padding: 0;
   display: flex;
   flex-direction: column;
   background-color: white;
